objects/LAT_BR_Sales_Prediction__c.object
<CustomObject>
    <fields>
        <fullName>LAT_BR_SP_CA__c</fullName>
        <label>CA</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_BR_SP_Credit_Analisis__c</fullName>
        <label>Credit Analisis</label>
        <referenceTo>Analise_de_credito__c</referenceTo>
        <relationshipLabel>LAT_BR_Sales Prediction</relationshipLabel>
        <relationshipName>LAT_BR_Sales_Prediction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAT_BR_SP_Previous_FY__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Previous FY</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_BR_SP_Price__c</fullName>
        <label>Price</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LAT_BR_SP_SKU__c</fullName>
        <label>SKU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Absolut</fullName>
                </value>
                <value>
                    <fullName>Chivas</fullName>
                </value>
                <value>
                    <fullName>Ballantines</fullName>
                </value>
                <value>
                    <fullName>Montilla</fullName>
                </value>
                <value>
                    <fullName>Natu Nobilis</fullName>
                </value>
                <value>
                    <fullName>Orloff</fullName>
                </value>
                <value>
                    <fullName>Passport</fullName>
                </value>
                <value>
                    <fullName>Teachers</fullName>
                </value>
                <value>
                    <fullName>Havana Club</fullName>
                </value>
                <value>
                    <fullName>Jameson</fullName>
                </value>
                <value>
                    <fullName>Perrier Jouet</fullName>
                </value>
                <value>
                    <fullName>Royal Salute</fullName>
                </value>
                <value>
                    <fullName>Outros</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>LAT_BR_Sales Prediction</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>LAT_BR_ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAT_BR_Sales Prediction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>